feat: add Playwright E2E smoke tests (12 tests across 3 browsers)

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,11 @@ Desktop.ini
 # IDEs
 .vscode/
 .idea/
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
