feat: implement dynamic hero section CMS, reorder dashboard tabs, and update social icons

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,12 @@ node_modules/
 /blob-report/
 /playwright/.cache/
 /playwright/.auth/
+
+# Sentry
+.sentry-debug-log
+
+# Turbopack/Turbo
+.turbo/
+
+# Logs
+*.log
